--- a/libs/blog/content/project.json
+++ b/libs/blog/content/project.json
@@ -1,17 +1,17 @@
 {
   "name": "content",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/content/src",
+  "sourceRoot": "libs/blog/content/src",
   "projectType": "library",
   "targets": {
     "build": {
       "executor": "@nx/js:tsc",
       "outputs": ["{options.outputPath}"],
       "options": {
-        "outputPath": "dist/libs/content",
-        "main": "libs/content/src/index.ts",
-        "tsConfig": "libs/content/tsconfig.lib.json",
-        "assets": ["libs/content/*.md"]
+        "outputPath": "dist/libs/blog/content",
+        "main": "libs/blog/content/src/index.ts",
+        "tsConfig": "libs/blog/content/tsconfig.lib.json",
+        "assets": ["libs/blog/content/*.md"]
       }
     },
     "lint": {
@@ -19,8 +19,8 @@
       "outputs": ["{options.outputFile}"],
       "options": {
         "lintFilePatterns": [
-          "libs/content/**/*.ts",
-          "libs/content/package.json"
+          "libs/blog/content/**/*.ts",
+          "libs/blog/content/package.json"
         ]
       }
     },
@@ -28,7 +28,7 @@
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "libs/content/jest.config.ts"
+        "jestConfig": "libs/blog/content/jest.config.ts"
       }
     }
   },
