--- a/libs/blog/styles/project.json
+++ b/libs/blog/styles/project.json
@@ -1,31 +1,31 @@
 {
   "name": "styles",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/styles/src",
+  "sourceRoot": "libs/blog/styles/src",
   "projectType": "library",
   "targets": {
     "build": {
       "executor": "@nx/js:tsc",
       "outputs": ["{options.outputPath}"],
       "options": {
-        "outputPath": "dist/libs/styles",
-        "main": "libs/styles/src/index.ts",
-        "tsConfig": "libs/styles/tsconfig.lib.json",
-        "assets": ["libs/styles/*.md"]
+        "outputPath": "dist/libs/blog/styles",
+        "main": "libs/blog/styles/src/index.ts",
+        "tsConfig": "libs/blog/styles/tsconfig.lib.json",
+        "assets": ["libs/blog/styles/*.md"]
       }
     },
     "lint": {
       "executor": "@nx/eslint:lint",
       "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": ["libs/styles/**/*.ts", "libs/styles/package.json"]
+        "lintFilePatterns": ["libs/blog/styles/**/*.ts", "libs/blog/styles/package.json"]
       }
     },
     "test": {
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "libs/styles/jest.config.ts"
+        "jestConfig": "libs/blog/styles/jest.config.ts"
       }
     }
   },
