--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "@nx/react": "17.1.3",
     "@nx/vite": "17.1.3",
     "@nx/workspace": "17.1.3",
-    "@swc-node/register": "~1.6.7",
-    "@swc/core": "~1.3.85",
+    "@swc-node/register": "^1.6.8",
+    "@swc/core": "^1.3.101",
     "@testing-library/react": "14.0.0",
     "@types/jest": "^29.4.0",
     "@types/node": "18.14.2",
