--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@gabrielcastillo.xyz/source",
+  "name": "@gabrielcastillo.xyz/root",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
