--- a/libs/blog/styles/project.json
+++ b/libs/blog/styles/project.json
@@ -3,6 +3,7 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/blog/styles/src",
   "projectType": "library",
+  "tags": [],
   "targets": {
     "build": {
       "executor": "@nx/js:tsc",
@@ -15,11 +16,7 @@
       }
     },
     "lint": {
-      "executor": "@nx/eslint:lint",
-      "outputs": ["{options.outputFile}"],
-      "options": {
-        "lintFilePatterns": ["libs/blog/styles/**/*.ts", "libs/blog/styles/package.json"]
-      }
+      "executor": "@nx/eslint:lint"
     },
     "test": {
       "executor": "@nx/jest:jest",
@@ -28,6 +25,5 @@
         "jestConfig": "libs/blog/styles/jest.config.ts"
       }
     }
-  },
-  "tags": []
+  }
 }
