--- a/apps/blog/.eslintrc.json
+++ b/apps/blog/.eslintrc.json
@@ -8,15 +8,9 @@
   "ignorePatterns": ["!**/*", ".next/**/*"],
   "overrides": [
     {
-      "files": ["*.*"],
-      "rules": {
-        "@next/next/no-html-link-for-pages": "off"
-      }
-    },
-    {
       "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
       "rules": {
-        "@next/next/no-html-link-for-pages": ["error", "apps/blog/pages"]
+        "@next/next/no-html-link-for-pages": ["error", "blog/pages"]
       }
     },
     {
