--- a/apps/blog/project.json
+++ b/apps/blog/project.json
@@ -1,19 +1,20 @@
 {
   "name": "blog",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "apps/blog",
+  "sourceRoot": "blog",
   "projectType": "application",
+  "tags": [],
   "targets": {
     "build": {
       "executor": "@nx/next:build",
       "outputs": ["{options.outputPath}"],
       "defaultConfiguration": "production",
       "options": {
-        "outputPath": "dist/apps/blog"
+        "outputPath": "dist/blog"
       },
       "configurations": {
         "development": {
-          "outputPath": "apps/blog"
+          "outputPath": "blog"
         },
         "production": {}
       }
@@ -42,20 +43,8 @@
         "buildTarget": "blog:build:production"
       }
     },
-    "test": {
-      "executor": "@nx/jest:jest",
-      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
-      "options": {
-        "jestConfig": "apps/blog/jest.config.ts"
-      }
-    },
     "lint": {
-      "executor": "@nx/eslint:lint",
-      "outputs": ["{options.outputFile}"],
-      "options": {
-        "lintFilePatterns": ["apps/blog/**/*.{ts,tsx,js,jsx}"]
-      }
+      "executor": "@nx/eslint:lint"
     }
-  },
-  "tags": []
+  }
 }
