--- a/apps/blog/tsconfig.spec.json
+++ b/apps/blog/tsconfig.spec.json
@@ -1,8 +1,8 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "../../dist/out-tsc",
-    "module": "ES2022",
+    "outDir": "../dist/out-tsc",
+
     "types": ["jest", "node"],
     "jsx": "react"
   },
