--- a/libs/blog/assets/project.json
+++ b/libs/blog/assets/project.json
@@ -3,13 +3,10 @@
   "$schema": "../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/blog/assets/src",
   "projectType": "library",
+  "tags": [],
   "targets": {
     "lint": {
-      "executor": "@nx/eslint:lint",
-      "outputs": ["{options.outputFile}"],
-      "options": {
-        "lintFilePatterns": ["libs/blog/assets/**/*.ts"]
-      }
+      "executor": "@nx/eslint:lint"
     },
     "test": {
       "executor": "@nx/jest:jest",
@@ -18,6 +15,5 @@
         "jestConfig": "libs/blog/assets/jest.config.ts"
       }
     }
-  },
-  "tags": []
+  }
 }
