--- a/libs/blog/components/package.json
+++ b/libs/blog/components/package.json
@@ -2,6 +2,8 @@
   "name": "@gxxc-blog/components",
   "version": "0.0.1",
   "type": "module",
-  "exports": "./index.js",
-  "types": "./index.d.ts"
+  "exports": "./src/index.ts",
+  "dependencies": {
+    "@mdx-js/mdx": "^3.0.1"
+  }
 }
