--- a/libs/blog/layouts/package.json
+++ b/libs/blog/layouts/package.json
@@ -2,6 +2,5 @@
   "name": "@gxxc-blog/layouts",
   "version": "0.0.1",
   "type": "module",
-  "exports": "./index.js",
-  "types": "./index.d.ts"
+  "exports": "./src/index.ts"
 }
