--- a/package.json
+++ b/package.json
@@ -1,65 +1,76 @@
 {
   "name": "@gabrielcastillo.xyz/root",
   "version": "0.0.0",
+  "type": "module",
   "license": "MIT",
   "scripts": {
     "clean": "find . -name 'node_modules' -print -type d -prune -exec rm -rf '{}' + "
   },
   "private": true,
   "dependencies": {
-    "@nx/next": "17.1.3",
+    "@angular-devkit/architect": "^0.1800.3",
     "change-case": "^5.2.0",
     "gray-matter": "^4.0.3",
-    "next": "13.4.1",
-    "next-mdx-remote": "^4.4.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "sharp": "^0.33.0",
     "title-case": "^4.1.2",
-    "tslib": "^2.3.0"
+    "tslib": "^2.6.2",
+    "vitest": "^1.6.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.5",
-    "@babel/preset-react": "^7.14.5",
-    "@nx/devkit": "^17.1.3",
-    "@nx/eslint": "17.1.3",
-    "@nx/eslint-plugin": "17.1.3",
-    "@nx/jest": "17.1.3",
-    "@nx/js": "17.1.3",
-    "@nx/react": "17.1.3",
-    "@nx/vite": "17.1.3",
-    "@nx/workspace": "17.1.3",
-    "@swc-node/register": "^1.6.8",
-    "@swc/core": "^1.3.101",
-    "@testing-library/react": "14.0.0",
-    "@types/jest": "^29.4.0",
-    "@types/node": "18.14.2",
-    "@types/react": "18.2.33",
-    "@types/react-dom": "18.2.14",
-    "@typescript-eslint/eslint-plugin": "^6.9.1",
-    "@typescript-eslint/parser": "^6.9.1",
-    "@vitejs/plugin-react": "~4.0.0",
-    "@vitest/coverage-v8": "~0.34.6",
-    "@vitest/ui": "~0.34.6",
-    "babel-jest": "^29.4.1",
-    "eslint": "~8.46.0",
-    "eslint-config-next": "13.4.1",
+    "@babel/core": "^7.23.5",
+    "@babel/preset-react": "^7.23.3",
+    "@nx/cypress": "19.1.1",
+    "@nx/devkit": "19.1.1",
+    "@nx/eslint": "19.1.1",
+    "@nx/eslint-plugin": "19.1.1",
+    "@nx/jest": "19.1.1",
+    "@nx/js": "19.1.1",
+    "@nx/next": "19.1.1",
+    "@nx/react": "19.1.1",
+    "@nx/vite": "19.1.1",
+    "@nx/web": "19.1.1",
+    "@nx/workspace": "19.1.1",
+    "@swc-node/register": "^1.9.1",
+    "@swc/cli": "~0.3.12",
+    "@swc/core": "^1.5.24",
+    "@swc/helpers": "^0.5.11",
+    "@testing-library/react": "15.0.6",
+    "@types/jest": "^29.5.10",
+    "@types/node": "18.19.9",
+    "@types/react": "18.3.1",
+    "@types/react-dom": "18.3.0",
+    "@typescript-eslint/eslint-plugin": "7.9.0",
+    "@typescript-eslint/parser": "7.9.0",
+    "@vitejs/plugin-react": "4.3.0",
+    "@vitest/coverage-v8": "^1.6.0",
+    "@vitest/ui": "^1.6.0",
+    "babel-jest": "^29.7.0",
+    "cypress": "^13.8.0",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.2.3",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-cypress": "^2.13.4",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
-    "jest": "^29.4.1",
-    "jest-environment-jsdom": "^29.4.1",
-    "jest-environment-node": "^29.4.1",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
     "jsdom": "~22.1.0",
-    "nx": "17.1.3",
-    "prettier": "^2.6.2",
-    "ts-jest": "^29.1.0",
+    "next": "^14.2.3",
+    "nx": "19.1.1",
+    "prettier": "^2.8.8",
+    "ts-jest": "^29.1.1",
     "ts-node": "10.9.1",
-    "typescript": "~5.2.2",
-    "vite": "~4.3.9",
-    "vite-plugin-dts": "~2.3.0",
-    "vitest": "~0.34.6"
-  }
+    "typescript": "5.4.5",
+    "vite": "5.2.9",
+    "vite-plugin-dts": "~3.8.1"
+  },
+  "workspaces": [
+    "apps/*",
+    "libs/blog/*"
+  ]
 }
