all is good now

--- a/package.json
+++ b/package.json
@@ -13,29 +13,29 @@
     "gray-matter": "^4.0.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "sharp": "^0.33.0",
-    "title-case": "^4.1.2",
-    "tslib": "^2.6.2",
+    "sharp": "^0.33.4",
+    "title-case": "^4.3.1",
+    "tslib": "^2.6.3",
     "vitest": "^1.6.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.5",
-    "@babel/preset-react": "^7.23.3",
-    "@nx/cypress": "19.1.1",
-    "@nx/devkit": "19.1.1",
-    "@nx/eslint": "19.1.1",
-    "@nx/eslint-plugin": "19.1.1",
-    "@nx/jest": "19.1.1",
-    "@nx/js": "19.1.1",
-    "@nx/next": "19.1.1",
-    "@nx/react": "19.1.1",
-    "@nx/vite": "19.1.1",
-    "@nx/web": "19.1.1",
-    "@nx/workspace": "19.1.1",
-    "@swc-node/register": "^1.9.1",
+    "@babel/core": "^7.24.7",
+    "@babel/preset-react": "^7.24.7",
+    "@nx/cypress": "19.3.0",
+    "@nx/devkit": "19.3.0",
+    "@nx/eslint": "19.3.0",
+    "@nx/eslint-plugin": "19.3.0",
+    "@nx/jest": "19.3.0",
+    "@nx/js": "19.3.0",
+    "@nx/next": "19.3.0",
+    "@nx/react": "19.3.0",
+    "@nx/vite": "19.3.0",
+    "@nx/web": "19.3.0",
+    "@nx/workspace": "19.3.0",
+    "@swc-node/register": "1.9.2",
     "@swc/cli": "~0.3.12",
-    "@swc/core": "^1.5.24",
-    "@swc/helpers": "^0.5.11",
+    "@swc/core": "1.5.7",
+    "@swc/helpers": "0.5.11",
     "@testing-library/react": "15.0.6",
     "@types/jest": "^29.5.10",
     "@types/node": "18.19.9",
@@ -60,14 +60,14 @@
     "jest-environment-jsdom": "^29.7.0",
     "jest-environment-node": "^29.7.0",
     "jsdom": "~22.1.0",
-    "next": "^14.2.3",
-    "nx": "19.1.1",
+    "next": "^14.2.4",
+    "nx": "19.3.0",
     "prettier": "^2.8.8",
     "ts-jest": "^29.1.1",
     "ts-node": "10.9.1",
     "typescript": "5.4.5",
     "vite": "5.2.9",
-    "vite-plugin-dts": "~3.8.1"
+    "vite-plugin-dts": "~3.8.3"
   },
   "workspaces": [
     "apps/*",
