--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "clean": "find . -name 'node_modules' -print -type d -prune -exec rm -rf '{}' + "
+    "clean": "pnpm clean:next & pnpm clean:node_modules",
+    "clean:next": "find . -name '.next' -print -type d -prune -exec rm -rf '{}' + ",
+    "clean:node_modules": "find . -name 'node_modules' -print -type d -prune -exec rm -rf '{}' + "
   },
   "private": true,
   "dependencies": {
@@ -21,19 +23,16 @@
   "devDependencies": {
     "@babel/core": "^7.24.7",
     "@babel/preset-react": "^7.24.7",
-    "@nx/cypress": "19.3.0",
-    "@nx/devkit": "19.3.0",
-    "@nx/eslint": "19.3.0",
-    "@nx/eslint-plugin": "19.3.0",
-    "@nx/jest": "19.3.0",
-    "@nx/js": "19.3.0",
-    "@nx/next": "19.3.0",
-    "@nx/react": "19.3.0",
-    "@nx/vite": "19.3.0",
-    "@nx/web": "19.3.0",
-    "@nx/workspace": "19.3.0",
+    "@nx/eslint": "19.3.1",
+    "@nx/eslint-plugin": "19.3.1",
+    "@nx/js": "19.3.1",
+    "@nx/next": "19.3.1",
+    "@nx/react": "19.3.1",
+    "@nx/vite": "19.3.1",
+    "@nx/web": "19.3.1",
+    "@nx/workspace": "19.3.1",
     "@swc-node/register": "1.9.2",
-    "@swc/cli": "~0.3.12",
+    "@swc/cli": "~0.3.14",
     "@swc/core": "1.5.7",
     "@swc/helpers": "0.5.11",
     "@testing-library/react": "15.0.6",
@@ -61,7 +60,7 @@
     "jest-environment-node": "^29.7.0",
     "jsdom": "~22.1.0",
     "next": "^14.2.4",
-    "nx": "19.3.0",
+    "nx": "19.3.1",
     "prettier": "^2.8.8",
     "ts-jest": "^29.1.1",
     "ts-node": "10.9.1",
