--- a/package.json
+++ b/package.json
@@ -11,26 +11,25 @@
   "private": true,
   "dependencies": {
     "@angular-devkit/architect": "^0.1800.3",
-    "change-case": "^5.2.0",
+    "change-case": "^5.4.4",
     "gray-matter": "^4.0.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "sharp": "^0.33.4",
+    "sharp": "^0.33.5",
     "title-case": "^4.3.1",
-    "tslib": "^2.6.3",
-    "vitest": "^1.6.0"
+    "tslib": "^2.8.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.7",
-    "@babel/preset-react": "^7.24.7",
-    "@nx/eslint": "19.3.1",
-    "@nx/eslint-plugin": "19.3.1",
-    "@nx/js": "19.3.1",
-    "@nx/next": "19.3.1",
-    "@nx/react": "19.3.1",
-    "@nx/vite": "19.3.1",
-    "@nx/web": "19.3.1",
-    "@nx/workspace": "19.3.1",
+    "@babel/core": "^7.25.9",
+    "@babel/preset-react": "^7.25.9",
+    "@nx/eslint": "20.0.5",
+    "@nx/eslint-plugin": "20.0.5",
+    "@nx/js": "20.0.5",
+    "@nx/next": "20.0.5",
+    "@nx/react": "20.0.5",
+    "@nx/vite": "20.0.5",
+    "@nx/web": "20.0.5",
+    "@nx/workspace": "20.0.5",
     "@swc-node/register": "1.9.2",
     "@swc/cli": "~0.3.14",
     "@swc/core": "1.5.7",
@@ -40,8 +39,8 @@
     "@types/node": "18.19.9",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
-    "@typescript-eslint/eslint-plugin": "7.9.0",
-    "@typescript-eslint/parser": "7.9.0",
+    "@typescript-eslint/eslint-plugin": "7.18.0",
+    "@typescript-eslint/parser": "7.18.0",
     "@vitejs/plugin-react": "4.3.0",
     "@vitest/coverage-v8": "^1.6.0",
     "@vitest/ui": "^1.6.0",
@@ -51,7 +50,7 @@
     "eslint-config-next": "14.2.3",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-cypress": "^2.13.4",
-    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-import": "2.31.0",
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
@@ -59,13 +58,14 @@
     "jest-environment-jsdom": "^29.7.0",
     "jest-environment-node": "^29.7.0",
     "jsdom": "~22.1.0",
-    "next": "^14.2.4",
-    "nx": "19.3.1",
+    "next": "^14.2.16",
+    "nx": "20.0.5",
     "prettier": "^2.8.8",
     "ts-jest": "^29.1.1",
     "ts-node": "10.9.1",
-    "typescript": "5.4.5",
+    "typescript": "5.5.4",
     "vite": "5.2.9",
+    "vitest": "^1.6.0",
     "vite-plugin-dts": "~3.8.3"
   }
 }
