--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -2,9 +2,10 @@
   "compileOnSave": false,
   "compilerOptions": {
     "rootDir": ".",
+    "baseUrl": ".",
+    "moduleResolution": "bundler",
     "sourceMap": true,
     "declaration": false,
-    "moduleResolution": "bundler",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "importHelpers": true,
@@ -12,8 +13,7 @@
     "module": "ESNext",
     "lib": ["es2020", "dom"],
     "skipLibCheck": true,
-    "skipDefaultLibCheck": true,
-    "baseUrl": "."
+    "skipDefaultLibCheck": true
   },
   "exclude": ["node_modules", "tmp"]
 }
