--- a/apps/blog/package.json
+++ b/apps/blog/package.json
@@ -12,7 +12,6 @@
     "remark-frontmatter": "^5.0.0"
   },
   "devDependencies": {
-    "tsx": "^4.19.2",
-    "ts-node": "10.9.1"
+    "tsx": "^4.19.2"
   }
 }
