--- a/.gitignore
+++ b/.gitignore
@@ -43,4 +43,6 @@ Thumbs.db
 .nx/workspace-data
 .obsidian
 .next
-**/vite.config.{js,ts,mjs,mts,cjs,cts}.timestamp*
+
+vite.config.*.timestamp*
+vitest.config.*.timestamp*
