--- a/package.json
+++ b/package.json
@@ -20,53 +20,46 @@
     "tslib": "^2.8.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.9",
-    "@babel/preset-react": "^7.25.9",
-    "@nx/eslint": "20.0.5",
-    "@nx/eslint-plugin": "20.0.5",
-    "@nx/js": "20.0.5",
-    "@nx/next": "20.0.5",
-    "@nx/react": "20.0.5",
-    "@nx/vite": "20.0.5",
-    "@nx/web": "20.0.5",
-    "@nx/workspace": "20.0.5",
-    "@nx/devkit": "20.0.5",
-    "@swc-node/register": "1.9.2",
-    "@swc/cli": "~0.3.14",
-    "@swc/core": "1.5.7",
-    "@swc/helpers": "0.5.11",
-    "@testing-library/react": "15.0.6",
-    "@types/jest": "^29.5.10",
-    "@types/node": "18.19.9",
-    "@types/react": "18.3.1",
-    "@types/react-dom": "18.3.0",
-    "@typescript-eslint/eslint-plugin": "7.18.0",
-    "@typescript-eslint/parser": "7.18.0",
-    "@vitejs/plugin-react": "4.3.0",
+    "@babel/core": "^7.26.9",
+    "@babel/preset-react": "^7.26.3",
+    "@nx/devkit": "20.4.6",
+    "@nx/eslint": "20.4.6",
+    "@nx/eslint-plugin": "20.4.6",
+    "@nx/js": "20.4.6",
+    "@nx/next": "20.4.6",
+    "@nx/react": "20.4.6",
+    "@nx/vite": "20.4.6",
+    "@nx/web": "20.4.6",
+    "@nx/workspace": "20.4.6",
+    "@testing-library/react": "16.1.0",
+    "@types/node": "^22.13.9",
+    "@types/react": "19.0.0",
+    "@types/react-dom": "19.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.26.0",
+    "@typescript-eslint/parser": "^8.26.0",
+    "@typescript-eslint/utils": "^8.13.0",
+    "@vitejs/plugin-react": "^4.3.4",
     "@vitest/coverage-v8": "^1.6.0",
     "@vitest/ui": "^1.6.0",
     "babel-jest": "^29.7.0",
     "cypress": "^13.8.0",
-    "eslint": "8.57.0",
-    "eslint-config-next": "14.2.3",
+    "eslint": "^9.21.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-cypress": "^2.13.4",
     "eslint-plugin-import": "2.31.0",
-    "eslint-plugin-jsx-a11y": "6.7.1",
-    "eslint-plugin-react": "7.32.2",
-    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-jsx-a11y": "6.10.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-environment-node": "^29.7.0",
     "jsdom": "~22.1.0",
-    "next": "^14.2.16",
-    "nx": "20.0.5",
+    "next": "^15.2.1",
+    "nx": "20.4.6",
     "prettier": "^2.8.8",
     "ts-jest": "^29.1.1",
     "ts-node": "10.9.1",
-    "typescript": "5.5.4",
+    "typescript": "5.7.3",
     "vite": "5.2.9",
-    "vitest": "^1.6.0",
-    "vite-plugin-dts": "~3.8.3"
+    "vite-plugin-dts": "~3.8.3",
+    "vitest": "^1.6.1"
   }
 }
